src/objects/MDLZ_Orders_To_Flip__c.object
<CustomObject>
    <description>Addressing 2154 issue will be used in a batch to flip the order items</description>
	<fields>
        <fullName>MDLZ_Is_Order_Accepted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This will be true when MDLZ_Is_Order_Accepted on order is true.</description>
        <label>Is Order Accepted</label>
        <type>Checkbox</type>
    </fields>
	<fields>
        <fullName>MDLZ_NewPhase__c</fullName>
        <length>50</length>
        <description>This field will save order's new phase value.</description>
        <label>NewPhase</label>
        <type>Text</type>
    </fields>
	<fields>
        <fullName>MDLZ_OldPhase__c</fullName>
		<length>50</length>
        <description>This field will save order's old phase value.</description>
        <label>OldPhase</label>
        <type>Text</type>
    </fields>
	<fields>
        <fullName>MDLZ_Operation__c</fullName>
        <label>Operation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>OrderAccepted</fullName>
                </value>
                <value>
                    <fullName>DupWrapper</fullName>
                </value>
                <value>
                    <fullName>OrderSync</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OrderId__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>OrderId</label>
        <referenceTo>ACCL__Order__c</referenceTo>
        <relationshipLabel>Orders To Flip</relationshipLabel>
        <relationshipName>Orders_To_Flip</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Orders To Flip</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Orders To Flip Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Orders To Flip</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>